traces/bug_776.txt
src/femlib/Mesh3dn.cpp:1602: error: DEAD_STORE
  The value written to &nve (type int) is never used.
Showing all 1 steps of the trace


src/femlib/Mesh3dn.cpp:1602:9: Write of unused value
1600.           typedef R3 Rd;
1601.           const Mesh3::Element & T(Th[it]);
1602.           const int nve = 4;
                ^
1603.           const Rd  Q[nve]={(const R3) T[0],(const R3) T[1],(const R3) T[2],(const R3) T[3]};
1604.           
